samples/_failures_safe/1761325529_f54d85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63a943c2.c: In function ‘main’:
./samples/SAFE/__tmp_63a943c2.c:147:22: error: expected ‘;’ at end of input
  147 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_63a943c2.c:147:5: error: expected declaration or statement at end of input
  147 |     for (int i = 0; i
      |     ^~~
